--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <div id = "container">
             
-            <img class="sslim c mbtn sfsx" src="ourworkwhite.png"></img><br>
-            <img class="sslim lc mbtn sfsx" src="aboutwhite.png"></img><br>
-            <img class="sslim rc mbtn sfsx" src="contactwhite.png"></img><br>
+            <p class="tc sslim c mbtn sfsx">ourwork</p><br>
+            <p class="tc sslim lc mbtn sfsx">about</p><br>
+            <p class="tc sslim rc mbtn sfsx">contact</p><br>
             
-            <img class="logo fadein" src="logo2fill.png"><img>
-            <img class="logob" src="logo2fill.png"><img>
+            <img class="logo fadein" src="logo2.png">
+            <img class="logob">
             <br>
             <!-- <img class="lim" src="advertising&advertisments.png"><img>
             <br>
