--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="keywords" content="home page of the strangest advertising agency on earth">
         <meta name="description" content="home contact">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div id = "container">
@@ -30,14 +31,13 @@
                     <p class="tc">we believe in advertising</p>
                     <p class="tc">we believe in advertising</p>
                     </div>
-                </div>
-
+                
                 <div class="ourwork">
                     <img class= "pim yn" src="yn.png">
                     <img class = "pim flag"src="flag.png">
                     <div>
-                    <p class="sfsx"> <span class="pimt tc">your niche (2022)</span> 
-                    <span class="pimt tc sfsx">prevote (2022)</span></p> 
+                    <p class="sfsx"> <span class="worktitle nmt pimt tc">your niche (2022)</span> 
+                    <span class="worktitle pimt tc sfsx">prevote (2022)</span></p> 
                     </div>
                 </div>
 
