--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
                         </div>
                     
                 <div class="about">
-                    <p class="tc">why don't small buisnesses advertise? do you believe in advertising? lets change the world by promoting small buisness; good advertising for everyone. 
+                    <p class="tc">do you believe in advertising? lets change the world by promoting small buisness; good advertising for everyone. 
                     </p>
                     <div class="mission"></div>
-                    <p class="tc">we believe in advertising</p>
-                    <p class="tc">we believe in advertising</p>
-                    <p class="tc">we believe in advertising</p>
-                    <p class="tc">we believe in advertising</p>
+                    <img class = "lpim" src = "poster1.png">
+                    <img class = "lpim" src = "poster2.png">
+                    <img class = "lpim" src = "poster3.png">
+                    <img class = "lpim" src = "poster4.png">
+                    <img class = "lpim" src = "poster5.png">
                     </div>
                 
                 <div class="ourwork">
@@ -42,7 +43,9 @@
                 </div>
 
                 <div class="contact">
-                    <p class="tc">7786765179 hmu</p>
+                    <input type="text">
+                    <input type="button" value="send">
+                    <p class="tc">if our brand resonates with you shoot us questions, work, advertisements - soliciting is always welcome  ,  lets advertise!</p>
                 </div>
 
             <img class="logo fadein" src="logo2.png">
