--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <br><br>
                     
                     <p class="tc">
-                    ad&ad was born to give the world the right to advertise ; our current task is to provide substantial creative advertising for small and idependent brands <br><br>
+                    ad&ad was born to give the world the right to advertise ; our current task is to provide substantial creative advertising for small and independent brands <br><br>
                     <br><br><br><br>
 
 
