--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@
         <p class="header"><b>about advertising & advertisements</b></p>
         <p class="bodytext">
         ad&ad is a small toronto based advertising agency founded on the belief that everyone should advertise . there is obvious disparity between those who advertise and those who do not , 
-        so our goal is to provide substantial creative advertising that is accessible to all .
+        so our goal is to provide substantial creative advertising that is accessible to all
         <br><br>
         we respect small businesses and want to see them thrive .  ad&ad understands the risks of advertising , so we keep costs low when working for small clients ; 
         all costs go towards materials and adspace ; we only profit if you profit . we want small business to advertise ! we can do everything ! just contact us !
         <br><br>
         <br><br>
         <br><br>
-        the current staff at ad&ad consists of two junior employees . the team shares interests in culture , sustainability and having a good time . 
+        the current staff at ad&ad consists of two junior employees . the team shares interests in culture , sustainability and having a good time
         <br><br>
-        <img class="staff" src="ee.jpg">
+        <img class="staff mobh" src="ee.jpg">
         <img class="staff" src="ee2.jpg">
         <br><br>
         <i>ad&ad is a project developed by Emmanuella Pinamang & Evan Stover to show their skillz </i>
