--- a/work/yn.html
+++ b/work/yn.html
@@ -39,8 +39,7 @@
                 <b>our solution</b><br><br>
                 our first breakthrough came about when we realized this : humans are connected by common interests . this insight led to many possible
                 solutions , each focusing on using common interests to connect people . 
-                <br> after much iteration , we settled on creating a series of installations designed 
-                to provoke conversation
+                 after much iteration , we settled on creating a series of installations designed to provoke conversation
                 <br>  
                 
             </p>
