--- a/ourwork.html
+++ b/ourwork.html
@@ -22,13 +22,13 @@
     </div>
 
     <div class="icons">
-        <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="yn.png"></a>
-        <a href="work\mss.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src=""></a>
-        <a href="work\sc.html"><img class="icon" alt="sashas cars" title="toronto based picture car rental" src=""></a>
-        <a href="work\bcd.html"><img class="icon" alt="bc dairy" title="getting people to drink milk" src=""></a>
-        <a href="work\qm.html"><img class="icon" alt="queen matress" title="getting people to test out matresses" src=""></a>
-        <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src=""></a>
-    
+        <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a>
+        <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a>
+        <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a>
+        <a href="work\sc.html"><img class="icon" alt="sashas cars" title="toronto based picture car rental" src="icons/ynt.png"></a>
+        <a href="work\bcd.html"><img class="icon" alt="bc dairy" title="getting people to drink milk" src="icons/ynt.png"></a>
+        <a href="work\qm.html"><img class="icon" alt="queen matress" title="getting people to test out matresses" src="icons/ynt.png"></a>
+        
     </div>
     <script src = "ourwork.js"></script>
 </body>
