--- a/ourwork.html
+++ b/ourwork.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" type = "text/css" href = "aa.css">
-        <title>about ad&ad</title>
+        <title>ad&ad's work</title>
         <meta name="keywords" content="all you need to know about advert ising and avert isements">
         <meta name="description" content="advertising for everybody & advertisements everywhere">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
