--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,21 @@
     </div>
 
     <div class="contents">
+        <p class="header"><b>contact us (if you want)</b></p>
         <p class="bodytext">
-        <b>contact us (if you want)</b>
+        
+        through our company email : <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> or reach out to one of our junior employees <br><br>
+        <a href="mailto:emma@adandad.ca">emma@adandad.ca</a> <br><br>
+        <a href="mailto:evan@adandad.ca">evan@adandad.ca</a>
         <br><br>
-        our company email : ee@adandad.ca
-        <br><br>
-        <br><br>
+        </p>
+        <!-- <br><br>
         ↓ or drop a line via this text box ↓
         </p>
         <textarea id="contactform" name="contactform" rows="10" cols="100"></textarea>
         <br>
-        <input type="button" value="send">
+        <input type="button" value="send"> -->
+        
     </div>
 
     <script src = "contact.js"></script>
