--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
     </div>
 
     <div class="contents">
-        <p class="header"><b>contact us (if you want)</b></p>
+        <p class="header">contact us (if you want)</p>
         <p class="bodytext">
-        
-        through our company email : <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> or reach out to one of our junior employees <br><br>
-        <a href="mailto:emma@adandad.ca">emma@adandad.ca</a> <br><br>
+        <br><br>
+        through our company email <br> <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
+        <a href="mailto:emma@adandad.ca">emma@adandad.ca</a> <br>
         <a href="mailto:evan@adandad.ca">evan@adandad.ca</a>
         <br><br>
         </p>
