--- a/ourwork.html
+++ b/ourwork.html
@@ -21,7 +21,17 @@
         <a class="contact" href="contact.html">contact</a>
     </div>
 
-    <div class="icons">
+    <table class="worktable mobh">
+
+        <tr>
+        <th class="icont"> <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a></th>
+        <th class="icont"> <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a></th>
+        <th class="icont"><a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a></th>
+        </tr>
+
+    </table>
+
+    <div class="icons mobs">
         <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a>
         <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a>
         <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a>
