--- a/work/wc.html
+++ b/work/wc.html
@@ -29,9 +29,9 @@
         <p class="bodytext">
             
             <b>resurrection</b><br><br>
-            wilkins coffee decided it was time to reimerge into the world . that why they asked us to revive their classic "wilkins wontkins"
+            wilkins coffee decided it was time to re emerge into the world . that why they asked us to revive their classic "wilkins wontkins"
             campaign . watch the original campaign <a href="https://www.youtube.com/watch?v=HVewx3-9x24">here</a> .
-            jim henson is credited with creating the commercials , which utilise his iconic puppets .
+            jim henson is credited with creating the commercials , which utilize his iconic puppets .
         </p>
            
             <p class = "bodytext">
