--- a/about.html
+++ b/about.html
@@ -25,20 +25,26 @@
     <div class="contents">
         <p class="header"><b>about advertising & advertisements</b></p>
         <p class="bodytext">
-        ad&ad is a small toronto based advertising agency founded on the belief that everyone should advertise . there is obvious disparity between those who advertise and those who do not , 
-        so our goal is to provide substantial creative advertising that is accessible to all
+        ad&ad is a small international advertising agency . our general sentiment is that advertising small businesses
+        helps them compete with the enemy corporations . 
         <br><br>
-        we respect small businesses and want to see them thrive .  ad&ad understands the risks of advertising , so we keep costs low when working for small clients ; 
-        all costs go towards materials and adspace ; we only profit if you profit . we want small business to advertise ! we can do everything ! just contact us !
+        a d v e r t i s i n g w o r k s
         <br><br>
+        we are also very interested in advertising renewable energy .
+        </p><br>
+        <p class="header"><b>about us</b></p>
+        <p class="bodytext">
+        after recent incidents left the company with zero employees , we finally managed to find our first junior employee back in january .
+        evan did some work for us and has recently hired emma as the second junior employee . 
         <br><br>
-        <br><br>
-        the current staff at ad&ad consists of two junior employees . the team shares interests in culture , sustainability and having a good time
-        <br><br>
+        emma is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
+        
+        <br><br><br>
+        
         <img class="staff mobh" src="ee.jpg">
         <img class="staff" src="ee2.jpg">
-        <br><br>
-        <i>ad&ad is a project developed by Emmanuella Pinamang & Evan Stover to show their skillz </i>
+        <br><br><br>
+        <i>" this probably all seems incredible , but its true ; because we are the strangest advertising agency in the world "</i> - avery a. advertising
         </p>
     </div>
 
