--- a/ourwork.html
+++ b/ourwork.html
@@ -24,17 +24,20 @@
     <table class="worktable mobh">
 
         <tr>
-        <th class="icont"> <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a></th>
-        <th class="icont"> <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a></th>
-        <th class="icont"><a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a></th>
+        <th class="icont"> <a href="work\yn.html"><img class="icon yn" name="yn" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a></th>
+        <th class="icont"> <a href="work\ms.html"><img class="icon ms" name="ms" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a></th>
+        <th class="icont"><a href="work\wc.html"><img class="icon wc" name="wc" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a></th>
         </tr>
 
+        
     </table>
 
+
+  
     <div class="icons mobs">
-        <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/yn.png"></a>
-        <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/ms.png"></a>
-        <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wc.png"></a>
+        <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/ynm.png"></a>
+        <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/msm.png"></a>
+        <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wcm.png"></a>
         <a href="work\sc.html"><img class="icon" alt="sashas cars" title="toronto based picture car rental" src="icons/ynt.png"></a>
         <a href="work\bcd.html"><img class="icon" alt="bc dairy" title="getting people to drink milk" src="icons/ynt.png"></a>
         <a href="work\qm.html"><img class="icon" alt="queen matress" title="getting people to test out matresses" src="icons/ynt.png"></a>
