--- a/work/yn.html
+++ b/work/yn.html
@@ -78,9 +78,7 @@
 
         </div>
 
-        <p class="bodytext"><i>yourniche was created as a solution to an assignment created by Anthony Kerr , and as such , never had any funding . 
-            the truth is that we do not know how it would have performed were it real .
-        </i></p>
+        <p class="bodytext"><i>" this probably seems incredible , and it is ; we made this whole thing up " - evan stover</i></p>
        
         </div>
         <script src = "yn.js"></script>
