--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     <div class="contents">
         <p class="header"><b>about advertising & advertisements</b></p>
         <p class="bodytext">
-        ad&ad is a small international advertising agency . our general sentiment is that advertising small businesses
-        helps them compete with the enemy corporations . 
+        ad&ad is a small international advertising agency . our general sentiment is that advertising independent brands
+        helps them compete with the rival corporations . 
         <br><br>
         a d v e r t i s i n g w o r k s
         <br><br>
