--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
         <a class="about" href="about.html">about</a>
     </div>
 
-    <div class="contents">
+    <div class="contents content">
         <p class="header">contact us (if you want)</p>
         <p class="bodytext">
         <br><br>
         through our company email <br> <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
-        <a href="mailto:emma@adandad.ca">emma@adandad.ca</a> <br>
+        <a href="mailto:emma@adandad.ca">emmanuella@adandad.ca</a> <br>
         <a href="mailto:evan@adandad.ca">evan@adandad.ca</a>
         <br><br>
         </p>
