--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
 
     <body>
+        <canvas id="funboard" style="position:fixed;"></canvas>
+            <img src="logo2inv.png" alt="invisible ad&ad logo" style="max-height:20pt">
             <br>
             <br>
             <br>
@@ -22,6 +24,7 @@
             <a class="r indexbtn" href = "contact.html">contact</a>
       
     </body>
+    <script src="aa.js"></script>
 </html>
 
                 
