--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div>
 
 
-    <div class="contents">
+    <div class="contents content">
         <p class="header"><b>about advertising & advertisements</b></p>
         <p class="bodytext">
         ad&ad is a small international advertising agency . our general sentiment is that advertising independent brands
@@ -35,9 +35,9 @@
         <p class="header"><b>about us</b></p>
         <p class="bodytext">
         after recent incidents left the company with zero employees , we finally managed to find our first junior employee back in january .
-        evan did some work for us and has recently hired emma as the second junior employee . 
+        evan did some work for us and has recently hired emmanuella as the second junior employee . 
         <br><br>
-        emma is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
+        emmanuella is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
         
         <br><br><br>
         
