--- a/ourwork.html
+++ b/ourwork.html
@@ -20,7 +20,7 @@
         <a class="about" href="about.html">about</a><br>
         <a class="contact" href="contact.html">contact</a>
     </div>
-
+    <div class="content">
     <table class="worktable mobh">
 
         <tr>
@@ -38,11 +38,12 @@
         <a href="work\yn.html"><img class="icon" alt="yourniche" title="a solution to anti-social behavior" src="icons/ynm.png"></a>
         <a href="work\ms.html"><img class="icon" alt="mountain sky soap" title="sustainable advertising" src="icons/msm.png"></a>
         <a href="work\wc.html"><img class="icon" alt="wilkins coffee" title="resurrecting an old campaign" src="icons/wcm.png"></a>
-        <a href="work\sc.html"><img class="icon" alt="sashas cars" title="toronto based picture car rental" src="icons/ynt.png"></a>
+        <!-- <a href="work\sc.html"><img class="icon" alt="sashas cars" title="toronto based picture car rental" src="icons/ynt.png"></a>
         <a href="work\bcd.html"><img class="icon" alt="bc dairy" title="getting people to drink milk" src="icons/ynt.png"></a>
-        <a href="work\qm.html"><img class="icon" alt="queen matress" title="getting people to test out matresses" src="icons/ynt.png"></a>
+        <a href="work\qm.html"><img class="icon" alt="queen matress" title="getting people to test out matresses" src="icons/ynt.png"></a> -->
         
     </div>
+</div>
     <script src = "ourwork.js"></script>
 </body>
 </html>
