fixed emmas name

--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
             <summary>about our team</summary>
             <p class="bodytext">
                     after recent incidents left the company with zero employees , we finally managed to find our first junior employee back in january .
-                    evan did some work for us and has recently hired emmanuella as the second junior employee . 
+                    evan did some work for us and has recently hired emmanuela as the second junior employee . 
                     <br><br>
-                    emmanuella is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
+                    emmanuela is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
                     
                     <br><br><br>
                     
