changed contact and about

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topbar">
     <p class="menubutton"  onclick="menu()"> 
-     ≡  
+     +  
     </p>
     <a href="index.html"><img class="logo2" alt = "ad  &  ad logo" src="logo2fill.png"></a>
     </div>
@@ -23,33 +23,18 @@
 
 
     <div class="contents content">
-        <details>
-        <summary>about advertising & advertisements</summary>
-        <p class="bodytext">
-        ad&ad is a small international advertising agency . our general sentiment is that advertising independent brands
-        helps them compete with the rival corporations . 
-        <br><br>
-        a d v e r t i s i n g w o r k s
-        <br><br>
-        we are also very interested in advertising renewable energy .
-        </p>
-        </details>
-        <br>
-        <details>
-            <summary>about our team</summary>
-            <p class="bodytext">
-                    after recent incidents left the company with zero employees , we finally managed to find our first junior employee back in january .
-                    evan did some work for us and has recently hired emmanuela as the second junior employee . 
-                    <br><br>
-                    emmanuela is currently running our copenhagen branch, while evan manages the branches in vancouver and toronto . 
-                    
-                    <br><br><br>
-                    
-                    <img class="staff mobh" src="ee.jpg">
-                    <img class="staff" src="ee2.jpg">
-                    <br><br><br>
-            </p>
-            </details>
+	<div class="bodytext">
+	<p>advertising to spread the word , spreading the word of advertising !<br>
+	advertising comes in many forms ; it's because there are many forms of things to advertise , and there is a good way to advertise anything ( the hard part is finding that way ) .<br>
+	we exist connect brands with the audience they deserve , encorporating our strange and diverse worldview into everything we do .
+	</p>
+     <h4 id="adandad">about ad&ad</h4>
+	 <p id="adandadp"></p>
+	 
+	 <h4 id="team">our team</h4>
+	 <p id="teamp"></p>
+        </div>
+		
             <p class="footer">
         <i>" this probably all seems incredible , but its true ; because we are the strangest advertising agency in the world "</i> - avery a. advertising
         </p>
