--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     
     <div class="topbar">
     <p class="menubutton"  onclick="menu()"> 
-     ≡  
+     +  
     </p>
     <a href="index.html"><img class="logo2" alt = "ad  &  ad logo" src="logo2fill.png"></a>
     </div>
@@ -28,7 +28,7 @@
         <p class="bodytext">
         <br><br>
         through our company email <br> <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
-        <a href="mailto:emma@adandad.ca">emmanuella@adandad.ca</a> <br>
+        <a href="mailto:emma@adandad.ca">emmanuela@adandad.ca</a> <br>
         <a href="mailto:evan@adandad.ca">evan@adandad.ca</a>
         <br><br>
         </p>
