changed about some more

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 	<div class="bodytext">
 	<p>advertising to spread the word , spreading the word of advertising !<br>
 	advertising comes in many forms ; it's because there are many forms of things to advertise , and there is a good way to advertise anything ( the hard part is finding that way ) .<br>
-	we exist connect brands with the audience they deserve , encorporating our strange and diverse worldview into everything we do .
+	we exist to connect brands with the audience they deserve , encorporating our strange and diverse worldview into everything we do .
 	</p>
      <h4 id="adandad">about ad&ad</h4>
 	 <p id="adandadp"></p>
