added services to about

--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
 	 
 	 <h4 id="team">our team</h4>
 	 <p id="teamp"></p>
+	 
+	 <h4 id="service">our services</h4>
+	 <p id="servicep"></p>
         </div>
 		
             <p class="footer">
