--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
         <p class="header">contact us (if you want)</p>
         <p class="bodytext">
         <br><br>
-        through our company email <br> <a href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
-        <a href="mailto:emma@adandad.ca">emmanuela@adandad.ca</a> <br>
-        <a href="mailto:evan@adandad.ca">evan@adandad.ca</a>
+        through our company email <br> <a id='e' href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
+        <a id='emma' href="mailto:emma@adandad.ca">emmanuela@adandad.ca</a> <br>
+        <a id='evan' href="mailto:evan@adandad.ca">evan@adandad.ca</a>
         <br><br>
         </p>
         <!-- <br><br>
