added content to sc

--- a/work/sc.html
+++ b/work/sc.html
@@ -3,9 +3,9 @@
     <head>
 		<meta charset="utf-8">
         <link rel = "stylesheet" type = "text/css" href = "../aa.css">
-        <title>ad&ad x wilkins coffee</title>
+        <title>ad&ad x Sasha's Cars</title>
         <meta name="keywords" content="Sasha's Cars">
-        <meta name="description" content="resurrecting an old campaign">
+        <meta name="description" content="ad&ad first client">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="../favicon.ico">
     </head>
@@ -24,10 +24,10 @@
 		<a class="contact" href="../contact.html">contact</a>
     </div>
 
-    <div class="contents content">
+<div class="contents content">
 
 <div class='stacon'>
-<p class='bodytext'>
+<p style='font-size:15pt;line-height:40pt'>
 
 <span id='stasel'>statement</span>
 <br>
@@ -37,15 +37,38 @@
 </div>
 
 <div class='work' id='con'>
+<img class='simg' src='sc1.png'>
+<img class='simg' src='sc12.jpg'>
+<img class='simg' src='sc2.png'>
+<img class='simg' src='sc3.png'>
+<img class='simg' src='sc11.jpg'>
+<img class='simg' src='sc9.jpg'>
+<img class='simg' src='sc10.jpg'>
+<img class='simg' src='sc8.jpg'>
+<img class='simg' src='sc7.jpg'>
+<img class='simg' src='sc4.png'>
+<img class='simg' src='sc5.png'>
+<img class='simg' src='sc6.jpg'>
 
-<img class='workimg' src='sc1.jpg'>
+
+
+
+
+
 
 </div>
 
 <div class='work' id='sta'>
 
 <p class='bodytext'>
-our first ever client , sashas cars !
+our first client and long term partner , <a target='_blank' id='sclink' href='https://sashascars.ca'>Sasha's Cars</a> has been renting classic picture cars to the GTA since 2019 . <br><br>
+in early 2024 , we approached Sasha Fatsevych of Sasha's Cars . we had heard he wanted help growing his brand , so we prepared a pitch deck with some ideas and gave him a call .
+being focused on renting cars and growing his collection since the start , Sasha's internet presence was very minimal when we first started working with him ; wanting to give his brand a greater sense of legitimacy ,
+we got to work on a website right away
+<a id='sclink2' href='https://sashascars.ca' target='_blank'>( <u>which you can check out here</u> )</a> in addition to making regular posts on his instagram <a rel='noopener noreferrer' target='_blank' id='sciglink'href='https://www.instagram.com/sashas.cars/'>( <u>linked here</u> )</a>
+featuring clients that had rented Sasha's Cars .<br><br>
+we know that Sasha's website and instagram are likely to be a clients first interaction with his brand , so we have been working to keep them informative and engaging . now that Sasha's Cars has an accessible first touch point for future clients ,
+we are continuing our work for Sasha by creating advertisements . at the moment we are working on short form videos for his social media pages .
 </p>
 
 </div>
