--- a/index.html
+++ b/index.html
@@ -3,27 +3,47 @@
     <head>
         <link rel = "stylesheet" type = "text/css" href = "aa.css">
         <title>advertising & advertisements</title>
-        <meta name="keywords" content="home page of the strangest advertising agency on earth">
-        <meta name="description" content="home contact">
+        <meta name="keywords" content="full service creative advertising and brand work based in the beautiful cities of Copenhagen and Vancouver">
+        <meta name="description" content="Copenhagen & Vancouver's extremely strange ( but real ) advertising agency .">
+		<meta name="og:title" property="og:title" content="ad&ad - the strangest ad agency on earth">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon.ico">
+		<meta charset="UTF-8">
     </head>
 
     <body>
+	<div style='overflow-x:hidden;overflow-y:hidden'>
        
             <img src="logo2inv.png" alt="invisible ad&ad logo" style="max-height:20pt">
-            <br>
-            <br>
-            <br>
-            <img class="logo" alt="ad&ad logo" src="logo2.png">
-            <br>
-            <br>
-            <br>
+			<div class='flex'>
 
-            <a class="l indexbtn" href = "ourwork.html">ourwork</a><br>
-            <a class="c indexbtn" href = "about.html">about</a><br>
+            <img class="logo" alt="ad&ad logo" src="logo2.png">
+			</div>
+			
+	
+			<nav class='flex'>
+			<div>
+            <a class="l indexbtn" href = "ourwork.html">ourwork</a>
+			</div>
+			<div>
+            <a class="c indexbtn" href = "about.html">about</a>
+			</div>
+			<div>
             <a class="r indexbtn" href = "contact.html">contact</a>
+			</div>
+			</nav>
+		
+		
       
+		<h3 class='banner'>
+		we don't let anyone mess with our clients , web design , creative ads , consulting , make something strange , become amazing . advertising & advertisements is the oldest advertising agency on earth , at least thats what my boss tells me . copywriting , web development , photography , our skilled creatives can handle anything you throw at them . vancouver and copenhagen , two beautiful cities , evan and emma , two strange creatives ! the world needs more advertising , we're here get the ball rolling !
+		</h3>
+		
+		<h5 class='bannerv'>
+		emphemeral and adaptive , there are no two words to better describe our creative team . trends come and go , but we are here to stay . innovative and progressive advertising , keep your brand tapped in to the ebb and flow of culture .
+		</h5>
+		
+		</div>
     </body>
     <script src="aa.js"></script>
 </html>
