--- a/work/sc.html
+++ b/work/sc.html
@@ -36,20 +36,30 @@
 </p>
 </div>
 
+
 <div class='work' id='con'>
+<p class= 'htext' style='text-align:right'>Sasha's Cars</p>
+<p class='htext'>site graphics</p>
 <img class='simg' src='sc1.png'>
-<img class='simg' src='sc12.jpg'>
 <img class='simg' src='sc2.png'>
 <img class='simg' src='sc3.png'>
-<img class='simg' src='sc11.jpg'>
-<img class='simg' src='sc9.jpg'>
-<img class='simg' src='sc10.jpg'>
-<img class='simg' src='sc8.jpg'>
-<img class='simg' src='sc7.jpg'>
-<img class='simg' src='sc4.png'>
 <img class='simg' src='sc5.png'>
+<img class='simg' src='sc4.png'>
+<br>
+<p class='htext'>car graphics</p>
 <img class='simg' src='sc6.jpg'>
-
+<img class='simg' src='sc7.jpg'>
+<img class='simg' src='sc8.jpg'>
+<img class='simg' src='sc10.jpg'>
+<img class='simg' src='sc11.jpg'>
+<img class='simg' src='sc12.jpg'>
+<img class='simg' src='sc9.jpg'>
+<p class='htext'>social videos</p>
+<video class='limg' controls src='sc1.mp4'></video>
+<video class='limg' controls src='sc2.mp4'></video>
+<video class='limg' controls src='sc3.mp4'></video>
+<video class='limg' controls src='sc4.mp4'></video>
+<video class='limg' controls src='sc5.mp4'></video>
 
 
 
@@ -59,7 +69,7 @@
 </div>
 
 <div class='work' id='sta'>
-
+					   <p class= 'htext' style='text-align:right'>Sasha's Cars</p>
 <p class='bodytext'>
 our first client and long term partner , <a target='_blank' id='sclink' href='https://sashascars.ca'>Sasha's Cars</a> has been renting classic picture cars to the GTA since 2019 . <br><br>
 in early 2024 , we approached Sasha Fatsevych of Sasha's Cars . we had heard he wanted help growing his brand , so we prepared a pitch deck with some ideas and gave him a call .
