why do i need a commit message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel = "stylesheet" type = "text/css" href = "aa.css">
         <title>advertising & advertisements</title>
-        <meta name="keywords" content="full service creative advertising and brand work based in the beautiful cities of Copenhagen and Vancouver">
+        <meta name="keywords" content="ad&ad or adandad , short for advertising and advertisements , is a full service creative advertising and brand work based in the beautiful cities of Copenhagen and Vancouver">
         <meta name="description" content="Copenhagen & Vancouver's extremely strange ( but real ) advertising agency .">
 		<meta name="og:title" property="og:title" content="ad&ad - the strangest ad agency on earth">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
