--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-	<div style='overflow-x:hidden;overflow-y:hidden'>
+	<div>
        
             <img src="logo2inv.png" alt="invisible ad&ad logo" style="max-height:20pt">
 			<div class='flex'>
@@ -34,14 +34,16 @@
 			</nav>
 		
 		
-      
+	   <div class='bannercontainer'>
 		<h3 class='banner'>
 		we don't let anyone mess with our clients , web design , creative ads , consulting , make something strange , become amazing . advertising & advertisements is the oldest advertising agency on earth , at least thats what my boss tells me . copywriting , web development , photography , our skilled creatives can handle anything you throw at them . vancouver and copenhagen , two beautiful cities , evan and emma , two strange creatives ! the world needs more advertising , we're here get the ball rolling !
 		</h3>
 		
-		<h5 class='bannerv'>
+		<!--<h5 class='bannerv'>
 		emphemeral and adaptive , there are no two words to better describe our creative team . trends come and go , but we are here to stay . innovative and progressive advertising , keep your brand tapped in to the ebb and flow of culture .
-		</h5>
+		</h5>-->
+		
+		</div>
 		
 		</div>
     </body>
