--- a/blog.html
+++ b/blog.html
@@ -14,21 +14,22 @@
 
 	
 	<body>
-	
+	 <canvas id="funboard" style="position:fixed;left:0;top:0;z-index:-1;"></canvas>
 	<div class="topbar">
 
     <a href="index.html"><img class="logo2" alt = "ad  &  ad logo" src="logo2fill.png" style='opacity:0.0'></a>
+		<br><br>
+		<div class='title'>
+		 	<h1>freelance programer-copywriter</h1>
+
+		<p>evan stover's blog about looking for work in advertising</p>
+		 </div>
     </div>
 
 	
 
-
 	<div class="content">
-	
-		 	<h1>freelance programer-copywriter</h1>
-
-		<p>evan stover's blog about looking for work in advertising</p>
-		
+		<br>   
 		<br>
 	
 
@@ -66,5 +67,5 @@
 	<p><a href='mailto:evan@adandad.ca'>contact<a>&nbsp&nbsp<a href='https://esadvertising.ca'>my portfolio</a>
 	</div>
 	
-	
+	<script src='blog.js'></script>
 	</body>
