--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
 	<p>hello . my name is evan stover . first things first : 
 	<br><br>
 	<b>why i don't capitalize my letters</b><br>
-	because capital letter are the most pointless thing in the english language . please , please let me know if you ever find my writing style inhibits you from understanding my writing . obviously i wouldn't write like this for a client ( unless they asked me to ) .
+	because capital letters are the most pointless thing in the english language . please , please let me know if you ever find my writing style inhibits you from understanding my writing . obviously i wouldn't write like this for a client ( unless they asked me to ) .
 	but seriously , i'm just trying to make english a more functional and beautiful language . yes i've been told it looks unprofessional , but why ? clearly i have a comprehensive understanding of the english language , clearly i know how im <i>supposed</i> to write ,
 	so stop giving me a hard time for having fun with my personal writing style .
 	<br><br>
