--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 		<div class='title'>
 		 	<h1>freelance programer-copywriter</h1>
 
-		<p>evan stover's blog about looking for work in advertising</p>
+		<p class='mobh'>evan stover's blog about looking for work in advertising</p>
 		 </div>
     </div>
 
@@ -43,7 +43,7 @@
 	all i know is that when your back is against the wall , belief only goes so far . what matters is that you do everything in your power to win . whether or not the canucks believed , they pushed as hard as possible . it seems that belief is not all it takes to win ,
 	but if you give up , then you might stop trying . trying is all it takes to win .
 	<br><br>
-	<img src='https://static1.squarespace.com/static/5266d49be4b0bc5cd29ee8e0/t/58a348395016e17b183b24cb/1487095869033/?format=1500w'>
+	<img src='https://media.video-cdn.espn.com/motion/2025/0409/ss_20250408_224339767_283145419/ss_20250408_224339767_283145419_default.jpg'>
 	</p>
 
 
